# online-store

./: docker-compose.infra.yml  docker-compose.yml
nginx/dev/: nginx.conf
src/: Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  setup.cfg
src/api/: router.py
src/api/v1/: auth.py  cart.py  contact_me.py  favorites.py  good.py  good_group.py  order.py  outlet.py
src/api/v1/lc/: good.py  good_group.py  good_storage.py  order.py  price.py  price_type.py  specification.py
src/core/: config.py  constants.py  enum.py  exceptions.py  middleware.py
src/db/: redis.py  session.py
src/db/migrations/: env.py
src/db/models/: __init__.py  cart.py  cart_good.py  favorites.py  favorites_good.py  good.py  good_group.py  good_specification.py  good_storage.py  mixins.py  order.py  order_good.py  price.py  price_type.py  specification.py
src/db/repositories/: base.py  cart.py  cart_good.py  favorites.py  favorites_good.py  good.py  good_group.py  good_specification.py  good_storage.py  order.py  order_good.py  outlet.py  price.py  price_type.py  specification.py
src/schemas/: base.py  cart.py  contact_me.py  favorites.py  good.py  good_group.py  good_storage.py  order.py  outlet.py  price.py  price_type.py  specification.py
src/services/: auth.py  utils.py
src/services/base/: base.py  good.py
src/services/lc/: good.py  good_group.py  good_storage.py  price.py  price_type.py  specification.py
src/services/web/: cart.py  contact_me.py  favorites.py  good.py  good_group.py  order.py  outlet.py
src/storages/: base.py  s3.py  session.py
(+6 files in other folders)
